--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.1",
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
@@ -40,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "dotenv-webpack": "^8.0.1",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   }
